# shelter-bot-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  test_database.py  test_neon.py
documents/: shelter.json  taipei_shelters.csv
local/: main.py  shelter_bot_polling.py  test_connection.py
scripts/: database_import_shelters.py
